[package]
name = "app"
version = "0.1.0"
edition = "2021"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
run-utils = { path = "../run-utils" }
qap-utils = { path = "../qap-utils" }
qap-algos = {path = "../qap-algos"}
rand = "0.9.0"
chrono = "0.4.40"